<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="16dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pes.mlab.newhealthcareapp.AddActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/studentpic"
                    android:layout_width="150dp"
                    android:layout_height="200dp"

                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_weight="0.48" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="50dp"
                    android:text="@string/chiIde1"
                    android:textColor="#ff000000"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/studentID"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="25dp"
                     />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chiIde2"
                android:textColor="#ff000000"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/studentName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cHint2"
                android:inputType="textPersonName"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/chiIde3"
                android:textColor="#ff000000"
                android:textSize="18dp" />

            <DatePicker
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="16dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/chiIde4"
                android:textColor="#ff000000"
                android:textSize="18dp" />


            <RadioGroup
                android:id="@+id/radioGroupOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/gender1"
                    android:onClick="genderRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/o1"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/gender2"
                    android:onClick="genderRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/o2"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/gender3"
                    android:onClick="genderRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/o3"
                    android:textSize="16dp" />
            </RadioGroup>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/chiIde5"
                    android:textColor="#ff000000"
                    android:textSize="18dp" />

                <Spinner
                    android:id="@+id/standard"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:textSize="16dp" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/chiIde6"
                android:textColor="#ff000000"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/chiIde7"
                android:textColor="#ff000000"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/fatherName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cHint3"
                android:inputType="textPersonName"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/chiIde8"
                android:textColor="#ff000000"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/motherName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cHint4"
                android:inputType="textPersonName"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/chiIde9"
                android:textColor="#ff000000"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/guardianName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cHint5"
                android:inputType="textPersonName"
                android:textSize="16dp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chiIde10"
                    android:textColor="#ff000000"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/attendance"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:hint="@string/cHint6"
                    android:inputType="numberDecimal"
                    android:maxLength="3"
                    android:textSize="16dp" />
            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/chiIde11"
                android:textColor="#ff000000"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/grade"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cHint7"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:textSize="16dp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>



</RelativeLayout>
